--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 									</li>
 									<li>
 										<span class="image major style1"><img src="images/kris.jpg" alt="concerned bear" /></span>
-										<h3>Kris 'Ainsley' Thirdyeare, Janitor </h3>
+										<h3>Chrys 'Ainsley' Firthyeare, Janitor </h3>
 										<p>hello i am krics i like to yanetor. i like bear. my mum says my favorate color is prple :). intrnet explorer is my favrate website. i go to gym.</p>
 									</li>
 								</ul>
