update Kris's life and get a new kris

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									<li>
 										<span class="image major style1"><img src="images/kris.jpg" alt="concerned bear" /></span>
 										<h3>Chrys 'Ainsley' Firthyeare, Janitor </h3>
-										<p>hello i am krics i like to yanetor. i like bear. my mum says my favorate color is prple :). intrnet explorer is my favrate website. i go to gym.</p>
+										<p>hello i am krics i like to yanetor. i like bear. my mum says my favorate color is prple :). intrnet explorer is my favrate website. i go to gym. my frend Ien gets a Pvc and it makes me feyl insecure. Like in some way I have been demasculated, like I have a lower self worth? It's funny but you are the first person I feel comfortable enough in my life with to talk about this with. I love you.</p>
 									</li>
 								</ul>
 								<footer class="major">
